Cambios para 4ta. entrega

--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
   },
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Gastonrt/Proyecto-Integrador-Coder.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Gastonrt/Proyecto-Integrador-Coder/issues"
+  },
+  "homepage": "https://github.com/Gastonrt/Proyecto-Integrador-Coder#readme",
   "description": ""
 }
